[package]
name = "reust"
version = "0.1.0"
authors = ["SebastiaanYN"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[workspace]
members = [
  "html-macro"
]

[dependencies]
wasm-bindgen = "0.2.75"
console_error_panic_hook = "0.1.6"
js-sys = "0.3.52"

html-macro = { path = "./html-macro" }
proc-macro-hack = "0.5.19"
proc-macro-nested = "0.1.7"

[dependencies.web-sys]
version = "0.3.52"
features = [
  'console',
  'Document',
  'Element',
  'Event',
  'EventTarget',
  'HtmlElement',
  'Node',
  'Text',
  'Window',
]

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
# Should we enable wasm-bindgen's debug assertions in its generated JS glue?
debug-js-glue = true
# Should wasm-bindgen demangle the symbols in the "name" custom section?
demangle-name-section = true
# Should we emit the DWARF debug info custom sections?
dwarf-debug-info = true
